# autonomous_imaging_robot_ros

./: CMakeLists.txt  README.md  lumenera_camera_nodelet.xml  package.xml
action/: CaptureImage.action  FindCharger.action  FindEnd.action  FindHome.action  Move.action  MoveCamera.action  Seek.action
config/: wb_xyz_gain.yaml  white_balance_params.yaml  xmpns.config
credentials/google/: datastore-cc8d59f69177.json
docs/high_level/: operation_instructions.txt
docs/low_level/: RT_Build.txt  enable_hpet.txt  enable_multicast.txt  enable_spi.txt  ftd4222_preparation.txt  install_google_cloud_storage.txt  install_mongo.txt  lumenera_driver_install.txt  setup_services.txt
include/: action_client.hpp  action_server.hpp  auto_white_balance.hpp  bob_definitions.hpp  bob_status.hpp  bq24770.hpp  bq4050.hpp  camera_header.hpp  ftd4222_helper.hpp  gpio.hpp  ids_camera.hpp  image_proc.hpp  ls7366.hpp  mfrc522.hpp  motion_control_functions.hpp  spi.hpp  track_plan.hpp  utils.hpp
kernel/halleffect/: halleffect.c
kernel/softpwm/: softpwm.c
launch/: camera_test.launch  gatekeeper.launch  manual.launch  startControlSystem.launch
msg/: Image.msg  ImageMeta.msg  NodeHealth.msg
scripts/: robobobDaemon.sh
src/: action_client.cpp  action_server.cpp  auto_white_balance.cpp  base_controller.cpp  bob_status.cpp  camera_node.cpp  camera_nodelet.cpp  cloud.py  control.cpp  ftd4222_helper.cpp  gatekeeper.py  gimbal.cpp  image_proc.cpp  ls7366.cpp  lum_camera.cpp  mfrc522.cpp  mh04.cpp  motion.cpp  odometry.cpp  opt_flow.cpp  power_node.cpp  supervisor.py  track_plan.cpp  uploader.py  user_control.cpp  utils.cpp  utils.py
srv/: CalibrateGimbal.srv  ChargeMaintenanceState.srv  ControlMode.srv  FindChargeCurrent.srv  FindEnd.srv  FindHome.srv  FindTheCharger.srv  GetAbs.srv  GetBatteryStatus.srv  GetCells.srv  GetCharge.srv  GetCurrent.srv  GetImage.srv  GetImageList.srv  GetLastRFID.srv  GetPosition.srv  GetRGBGains.srv  GetVoltage.srv  GimbalOrientation.srv  MoveCamera.srv  PerformWhiteBalance.srv  PowerGimbal.srv  ReadRFID.srv  ResetCounter.srv  ResetPower.srv  SaveImage.srv  SeekAGoalPosition.srv  SetCurrent.srv  SetTargetBrightness.srv  StartCharge.srv  StartStopStreaming.srv
system/: mongodb.service  robobob_daemon.service
